# aim-assist

./: .gitignore  README.md  package.json
crosshair-assist-electronjs-ts/electron/: preload.ts
crosshair-assist-electronjs-ts/electron/utils/: constants.ts  ipc.ts  rpc.ts  store.ts
crosshair-assist-electronjs-ts/public/: manifest.json
crosshair-assist-electronjs-ts/src/: App.test.tsx
crosshair-assist-electronjs-ts/src/css/: app.css
crosshair-assist-electronjs-ts/src/navigation/: router.tsx
crosshair-assist-electronjs-ts/src/screens/: DisplayScreen.tsx  HudScreen.tsx
crosshair-assist-electronjs-ts/src/utils/: base64.tsx  colors.tsx  types.tsx
crosshair-assist-tauri-rust/: index.html  package.json
crosshair-assist-tauri-rust/src/: App.tsx  main.tsx
crosshair-assist-tauri-rust/src-tauri/: Cargo.toml  tauri.conf.json
crosshair-assist-tauri-rust/src-tauri/src/: main.rs  rpc.rs
crosshair-assist-tauri-rust/src/css/: app.css
crosshair-assist-tauri-rust/src/navigation/: router.tsx
crosshair-assist-tauri-rust/src/screens/: Credits.tsx  DisplayScreen.tsx  HudScreen.tsx  LandingScreen.tsx
crosshair-assist-tauri-rust/src/utils/: simpleHandler.tsx  store.tsx  titlebar.tsx  types.tsx
electron/: main.ts
electron/utils/: ipc.ts  rpc.ts
public/: index.html
src/: app.tsx  index.tsx
src/css/: colors.css
src/screens/: HudScreen.tsx  LandingScreen.tsx
