[package]
name = "crosshair"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri = { version = "1.2", features = ["app-all", "global-shortcut-all", "shell-open", "system-tray", "window-all"] }
discord-rich-presence = "0.2.0"
chrono = "0.4.19"

[lib]
name = "rpc"
path = "src/rpc.rs"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
